# quorum-ai

./: .env.example  .gitignore  BUILDLOG.md  CLA.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  FAQ.md  INTEGRATION.md  LICENSE  README.md  README.zh-CN.md  RELEASING.md  ROADMAP.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
assets/: promo_cards.html  social_preview.html
docs/: DECISION_RECORD.md
examples/: decision_record.example.json  fun_case.yaml  novel_case.yaml  offer_case.yaml  serious_case.yaml  serious_case.zh.yaml  summit_client.example.jsx
quorum/: __init__.py  backends.py  cli.py  engine.py  i18n.py  montecarlo.py  privacy.py  record.py  schema.py  server.py
quorum/councils/: book_club.yaml  careers.yaml  dinner.yaml
schemas/: decision-record-1.0.schema.json
tests/: test_cli.py  test_engine.py
web/: index.html
