[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quorum-ai"
version = "0.1.0"
description = "A council of AI agents that deliberate your hardest decisions — and show their work."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Minghui Shi" }]
requires-python = ">=3.10"
keywords = ["multi-agent", "llm", "deliberation", "camel-ai", "agents"]
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
camel = ["camel-ai>=0.2"]
server = ["fastapi>=0.110", "uvicorn>=0.29", "sse-starlette>=2.0"]
cli = ["rich>=13.0"]
all = ["quorum-ai[camel,server,cli]"]

[project.scripts]
quorum = "quorum.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["quorum"]
