[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quorum-council"
version = "0.1.2"
description = "A council of AI agents that deliberate your hardest decisions — and show their work."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Minghui Shi" }]
requires-python = ">=3.10"
keywords = ["multi-agent", "llm", "deliberation", "camel-ai", "agents", "ai-council", "decision-making", "debate", "anthropic", "claude", "monte-carlo", "devils-advocate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
camel = ["camel-ai>=0.2"]
server = ["fastapi>=0.110", "uvicorn>=0.29", "sse-starlette>=2.0"]
cli = ["rich>=13.0"]
all = ["quorum-council[camel,server,cli]"]

[project.urls]
Homepage = "https://github.com/minghui31/quorum-ai"
Repository = "https://github.com/minghui31/quorum-ai"
"Live demo" = "https://quorum-brkj.onrender.com"
Issues = "https://github.com/minghui31/quorum-ai/issues"

[project.scripts]
quorum = "quorum.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["quorum"]
